--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,10 @@
 	</dependencies>
 	
     <scm>
-        <connection>scm:git:git@github.com:spincast/spincast-framework</connection>
-        <developerConnection>scm:git:git@github.com:spincast/spincast-framework</developerConnection>
+        <connection>scm:git:git@github.com:spincast</connection>
+        <developerConnection>scm:git:git@github.com:spincast</developerConnection>
         <url>git@github.com:spincast</url>
-    </scm>
+  </scm>
 
 	<build>
         
