--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<dependencies>
     
@@ -57,7 +57,8 @@
         <connection>scm:git:git@github.com:spincast</connection>
         <developerConnection>scm:git:git@github.com:spincast</developerConnection>
         <url>git@github.com:spincast</url>
-    </scm>
+      <tag>1.0.0</tag>
+  </scm>
 
 	<build>
         
