--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
     
@@ -54,11 +54,10 @@
 	</dependencies>
 	
     <scm>
-        <connection>scm:git:git@github.com:spincast</connection>
-        <developerConnection>scm:git:git@github.com:spincast</developerConnection>
-        <url>git@github.com:spincast</url>
-      <tag>1.0.0</tag>
-  </scm>
+        <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
+        <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
+        <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
+    </scm>
 
 	<build>
         
