--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 
 	<dependencies>
     
@@ -57,7 +57,7 @@
         <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
         <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
         <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
-      <tag>1.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 	<build>
