--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,19 @@
      
     <parent>
         <groupId>org.spincast</groupId>
-        <artifactId>spincast-parent</artifactId>
-        <version>0.9.21</version>
+        <artifactId>spincast-parent-pom</artifactId>
+        <version>1.0.0</version>
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
 	<version>1.0.2-SNAPSHOT</version>
+    
+    <scm>
+        <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
+        <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
+        <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
+      <tag>HEAD</tag>
+    </scm>
 
 	<dependencies>
     
@@ -52,13 +59,6 @@
         </dependency>
  
 	</dependencies>
-	
-    <scm>
-        <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
-        <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
-        <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
-      <tag>HEAD</tag>
-  </scm>
 
 	<build>
         
