--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>mimeparse</artifactId>
             <version>0.1.3.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.5.1</version>
+        </dependency>
  
 	</dependencies>
 
