--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
     </scm>
 
 	<dependencies>
+    
+        <dependency>
+        	<groupId>org.apache.httpcomponents</groupId>
+        	<artifactId>httpclient</artifactId>
+        	<version>4.5.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.2</version>
+        </dependency>
         
         <dependency>
         	<groupId>commons-io</groupId>
