--- a/pom.xml
+++ b/pom.xml
@@ -13,37 +13,49 @@
     <parent>
         <groupId>org.spincast</groupId>
         <artifactId>spincast-parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>1.0.8-SNAPSHOT</version>
     
     <scm>
         <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
         <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
         <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
-      <tag>HEAD</tag>
+        <tag>HEAD</tag>
     </scm>
 
 	<dependencies>
+    
+        <dependency>
+        	<groupId>org.apache.httpcomponents</groupId>
+        	<artifactId>httpclient</artifactId>
+        	<version>4.5.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.4</version>
+        </dependency>
         
         <dependency>
         	<groupId>commons-io</groupId>
         	<artifactId>commons-io</artifactId>
-        	<version>2.5</version>
+        	<version>2.6</version>
         </dependency>
         
         <dependency>
         	<groupId>org.apache.commons</groupId>
         	<artifactId>commons-lang3</artifactId>
-        	<version>3.4</version>
+        	<version>3.7</version>
         </dependency>
         
         <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
-            <version>1.5.1</version>
+            <version>1.6</version>
         </dependency>
  
 	</dependencies>
@@ -54,7 +66,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -114,7 +126,7 @@
             ====================================-->
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>delete-unwanted-artifacts</id>
