--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.10-SNAPSHOT</version>
+	<version>1.0.10</version>
     
     <scm>
         <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
         <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
         <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
-        <tag>HEAD</tag>
+        <tag>1.0.10</tag>
     </scm>
 
 	<dependencies>
