--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
      <!--=================================== 
-     The shared dependencies project is built separatly
+     The shared dependencies project is built separately
      from the framework because it leads to errors
      when imported in an IDE with the other projects.
      
@@ -13,17 +13,17 @@
     <parent>
         <groupId>org.spincast</groupId>
         <artifactId>spincast-parent-pom</artifactId>
-        <version>1.0.3</version>
+        <version>2.0.1</version>
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>1.0.13-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
     
     <scm>
         <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
         <developerConnection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</developerConnection>
         <url>git@github.com:spincast/spincast-shaded-dependencies.git</url>
-        <tag>HEAD</tag>
+        <tag>2.0.0</tag>
     </scm>
 
 	<dependencies>
@@ -31,13 +31,13 @@
         <dependency>
         	<groupId>org.apache.httpcomponents</groupId>
         	<artifactId>httpclient</artifactId>
-        	<version>4.5.6</version>
+        	<version>4.5.13</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-            <version>4.5.6</version>
+            <version>4.5.13</version>
         </dependency>
         
         <dependency>
@@ -49,7 +49,7 @@
         <dependency>
         	<groupId>org.apache.commons</groupId>
         	<artifactId>commons-lang3</artifactId>
-        	<version>3.7</version>
+        	<version>3.8.1</version>
         </dependency>
         
         <dependency>
@@ -61,13 +61,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.4</version>
+            <version>1.6</version>
         </dependency>
         
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.2</version>
+            <version>1.11.3</version>
         </dependency>
  
 	</dependencies>
@@ -78,7 +78,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -121,6 +121,13 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Automatic-Module-Name>org.spincast.shaded</Automatic-Module-Name>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
@@ -132,7 +139,7 @@
             ====================================-->
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>delete-unwanted-artifacts</id>
