--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
 	<artifactId>spincast-shaded-dependencies</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1-SNAPSHOT</version>
     
     <scm>
         <connection>scm:git:git@github.com:spincast/spincast-shaded-dependencies</connection>
